--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@ color:white;
 <li  class="nav2">కంప్యూటర్ విద్య
 <ul> 
      <li id="nav2li">C-Programming  </li>
+     <li id="nav2li">C#</li>
+     <li id="nav2li">Python</li>
      <li id="nav2li">HTML  </li>
      <li id="nav2li">Java Script </li>
       <li id="nav2li">CSS</li>
@@ -228,7 +230,7 @@ color:white;
 
 </div>
 </div>
-<div id="footer">Site is under construction</div>
+<div id="footer">Site needed to complete </div>
 </body>
 
 </html>
