--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@ color:white;
 <li class="nav2">ఉద్యోగ వార్తలు</li>
 <li  class="nav2">కంప్యూటర్ విద్య
 <ul> 
-     <li id="nav2li">C-Programming  </li>
+     <li id="nav2li">సి ప్రోగ్రామింగ్</li>
      <li id="nav2li">C#</li>
-     <li id="nav2li">Python</li>
-     <li id="nav2li">HTML  </li>
-     <li id="nav2li">Java Script </li>
+     <li id="nav2li">పైథాన్</li>
+     <li id="nav2li">HTML</li>
+     <li id="nav2li">జావాస్క్రిప్ట్ </li>
       <li id="nav2li">CSS</li>
-      <li id="nav2li">Java </li>
+      <li id="nav2li">జావా </li>
   </ul>
  </li>
 </ul>
@@ -230,7 +230,7 @@ color:white;
 
 </div>
 </div>
-<div id="footer">Site needed to complete </div>
+<div id="footer">సైట్ నిర్మాణంలో ఉంది! </div>
 </body>
 
 </html>
